--- a/css/style.production.css
+++ b/css/style.production.css
@@ -38,6 +38,17 @@ body {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
+  min-height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .page-header {
@@ -178,7 +189,7 @@ td {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  margin: 5% 0;
+  margin-top: auto;
 }
 
 .page-footer__item:last-child {
@@ -190,7 +201,7 @@ td {
 .about {
   margin: 10%;
 }
-.download {
+.btn {
   display: inline-block;
   padding: 10px;
   background-color: rgb(252, 141, 161);
@@ -224,6 +235,20 @@ td {
 .cloud-back {
   -webkit-animation: cloud-move-reverse 34s infinite linear alternate;
   animation: cloud-move-reverse 34s infinite linear alternate;
+}
+
+/* Contact Page */
+
+.contact {
+  margin: 10%;
+}
+
+.contact__item {
+  margin: 5%;
+}
+
+.standard-label {
+  margin-right: 20px;
 }
 
 /* media queries */
